--- a/brewing.html
+++ b/brewing.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hướng Dẫn Pha Chế - Cà Phê Sài Gòn</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <style>
     body { box-sizing: border-box; }
     .brew-card { transition: all 0.3s ease; }
@@ -121,16 +122,16 @@
                     </p>
                     <div class="flex space-x-4">
                         <a href="https://www.facebook.com/profile.php?id=61578290856109" target="_blank" rel="noopener noreferrer" class="bg-blue-600 hover:bg-blue-700 p-3 rounded-full transition-colors">
-                            <i class="fab fa-facebook-f">::before</i>
+                            <i class="fab fa-facebook-f"></i>
                         </a>
                         <a href="https://www.instagram.com/gainsta933/" target="_blank" rel="noopener noreferrer" class="bg-pink-600 hover:bg-pink-700 p-3 rounded-full transition-colors">
-                            <i class="fab fa-instagram">::before</i>
+                            <i class="fab fa-instagram"></i>
                         </a>
                         <a href="https://www.youtube.com/@T%E1%BA%A0PH%C3%93ASINHVI%C3%8AN102" target="_blank" rel="noopener noreferrer" class="bg-red-600 hover:bg-red-700 p-3 rounded-full transition-colors">
-                            <i class="fab fa-youtube">::before</i>
+                            <i class="fab fa-youtube"></i>
                         </a>
                         <a href="https://chat.zalo.me/" target="_blank" rel="noopener noreferrer" class="bg-blue-500 hover:bg-blue-600 p-3 rounded-full transition-colors">
-                            <i class="fas fa-comment">::before</i>
+                            <i class="fas fa-comment"></i>
                         </a>
                     </div>
                 </div>
