--- a/contact-support.html
+++ b/contact-support.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Liên Hệ Hỗ Trợ - Cà Phê Sài Gòn</title>
   <script src="https://cdn.tailwindcss.com"></script>
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <style>
     body {
       box-sizing: border-box;
@@ -113,10 +114,132 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-white py-8 mt-8 text-center">
-    <h3 class="text-lg font-semibold mb-4">Cà Phê Sài Gòn</h3>
-    <p class="text-gray-400 text-sm">© 2024 Cà Phê Sài Gòn. Tất cả quyền được bảo lưu.</p>
-  </footer>
+<footer id="contact" class="bg-gray-900 text-white py-16">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+                <!-- Company Info -->
+                <div class="fade-in">
+                    <div class="flex items-center mb-6">
+                        <i class="fas fa-coffee text-3xl text-yellow-400 mr-3"></i>
+                        <h3 class="text-2xl font-bold">Cà Phê Sài Gòn</h3>
+                    </div>
+                    <p class="text-gray-300 mb-6 leading-relaxed">
+                        Mang đến cho bạn hương vị chính hiệu của văn hóa cà phê Việt Nam với những hạt cà phê chất lượng cao và phương pháp pha chế truyền thống.
+                    </p>
+                    <div class="flex space-x-4">
+                        <a href="https://www.facebook.com/profile.php?id=61578290856109" target="_blank" rel="noopener noreferrer" class="bg-blue-600 hover:bg-blue-700 p-3 rounded-full transition-colors">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="https://www.instagram.com/gainsta933/" target="_blank" rel="noopener noreferrer" class="bg-pink-600 hover:bg-pink-700 p-3 rounded-full transition-colors">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://www.youtube.com/@T%E1%BA%A0PH%C3%93ASINHVI%C3%8AN102" target="_blank" rel="noopener noreferrer" class="bg-red-600 hover:bg-red-700 p-3 rounded-full transition-colors">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                        <a href="https://chat.zalo.me/" target="_blank" rel="noopener noreferrer" class="bg-blue-500 hover:bg-blue-600 p-3 rounded-full transition-colors">
+                            <i class="fas fa-comment"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Contact Information -->
+                <div class="fade-in">
+                    <h4 class="text-xl font-semibold mb-6">Thông Tin Liên Hệ</h4>
+                    <div class="space-y-4">
+                        <div class="flex items-start">
+                            <i class="fas fa-map-marker-alt text-yellow-400 mt-1 mr-3"></i>
+                            <div>
+                                <p class="text-gray-300">123 Đường Cà Phê</p>
+                                <p class="text-gray-300">Quận 1, Thành phố Hồ Chí Minh</p>
+                                <p class="text-gray-300">Việt Nam 70000</p>
+                            </div>
+                        </div>
+                        <div class="flex items-center">
+                            <i class="fas fa-phone text-yellow-400 mr-3"></i>
+                            <p class="text-gray-300">+84 (0) 988 007 527</p>
+                        </div>
+                        <div class="flex items-center">
+                            <i class="fas fa-envelope text-yellow-400 mr-3"></i>
+                            <p class="text-gray-300">BABAIU23341@student.hcmiu.edu.vn</p>
+                        </div>
+                        <div class="flex items-center">
+                            <i class="fas fa-clock text-yellow-400 mr-3"></i>
+                            <div>
+                                <p class="text-gray-300"> Mở cửa thứ 2-6: 7:00 - 20:00</p>
+                                <p class="text-gray-300">Mở cửa thứ 7-CN: 8:00 - 21:00</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Customer Support -->
+                <div class="fade-in">
+                    <h4 class="text-xl font-semibold mb-6">Hỗ Trợ Khách Hàng</h4>
+                    <div class="space-y-3">
+                        <a href="shipping.html" class="block text-gray-300 hover:text-yellow-400 transition-colors">
+                            <i class="fas fa-shipping-fast mr-2"></i>Thông Tin Vận Chuyển
+                        </a>
+                        
+                        <a href="faq.html" class="block text-gray-300 hover:text-yellow-400 transition-colors">
+                            <i class="fas fa-question-circle mr-2"></i>Câu Hỏi Thường Gặp
+                        </a>
+                        <a href="contact-support.html" class="block text-gray-300 hover:text-yellow-400 transition-colors">
+                            <i class="fas fa-headset mr-2"></i>Liên Hệ Hỗ Trợ
+                        </a>
+                        <a href="brewing.html" class="block text-gray-300 hover:text-yellow-400 transition-colors">
+                            <i class="fas fa-coffee mr-2"></i>Hướng Dẫn Pha Chế
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Policies -->
+                <div class="fade-in">
+                    <h4 class="text-xl font-semibold mb-6">Pháp Lý & Chính Sách</h4>
+                    <div class="space-y-3">
+
+<a href="privacy.html" class="block text-gray-300 hover:text-yellow-400 transition-colors">
+  <i class="fas fa-shield-alt mr-2"></i>Chính Sách Bảo Mật
+</a>
+<a href="terms.html" class="block text-gray-300 hover:text-yellow-400 transition-colors">
+  <i class="fas fa-file-contract mr-2"></i>Điều Khoản Dịch Vụ
+</a>
+<a href="returns.html" class="block text-gray-300 hover:text-yellow-400 transition-colors">
+  <i class="fas fa-undo mr-2"></i>Chính Sách Hoàn Tiền & Đổi Trả
+</a>
+                        
+                        <div class="mt-6">
+                            <a href="http://online.gov.vn/Home/WebDetails/19168" target="_blank" rel="noopener noreferrer" class="inline-block">
+                                <img src="https://webmedia.com.vn/images/2021/09/logo-da-thong-bao-bo-cong-thuong-mau-xanh.png" alt="Bộ Công Thương Badge" class="h-16" onerror="this.style.display='none';">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Bottom Footer -->
+            <div class="border-t border-gray-700 mt-12 pt-8">
+                <div class="flex flex-col md:flex-row justify-between items-center">
+                    <p class="text-gray-400 text-sm">
+                        © 2024 Cà Phê Sài Gòn. Tất cả quyền được bảo lưu.
+                    </p>
+                    <div class="flex items-center mt-4 md:mt-0">
+                        <p class="text-gray-400 text-sm mr-4">Chúng tôi chấp nhận:</p>
+                        <div class="flex space-x-2">
+                            <div class="bg-white rounded px-2 py-1">
+                                <span class="text-xs font-bold text-blue-600">VISA</span>
+                            </div>
+                            <div class="bg-white rounded px-2 py-1">
+                                <span class="text-xs font-bold text-red-600">MC</span>
+                            </div>
+                            <div class="bg-white rounded px-2 py-1">
+                                <span class="text-xs font-bold text-blue-800">AMEX</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
   <script>
     function handleSubmit(event) {
